unpackaged/main/default/objects/ApplicantAddress__c/ApplicantAddress__c.object-meta.xml
<CustomObject>
    <label>Applicant Address</label>
    <nameField>
        <displayFormat>ADD-{0000}</displayFormat>
        <label>Applicant Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicant Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>