unpackaged/main/default/objects/ApplicantAddress__c/fields/LivedHereFor3Years__c.field-meta.xml
<CustomField>
    <fullName>LivedHereFor3Years__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lived here for the past 3 years?</label>
    <type>Checkbox</type>
</CustomField>