unpackaged/main/default/objects/ApplicantAddress__c/fields/MonthlyRentPayment__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRentPayment__c</fullName>
    <label>Monthly Rent Payment</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>