unpackaged/main/default/objects/ApplicantAddress__c/fields/MonthsInResidence__c.field-meta.xml
<CustomField>
    <fullName>MonthsInResidence__c</fullName>
    <label>Months In Residence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>