unpackaged/main/default/objects/ApplicantAddress__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Street Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>