unpackaged/main/default/objects/ApplicantAddress__c/fields/ResidenceStatus__c.field-meta.xml
<CustomField>
    <fullName>ResidenceStatus__c</fullName>
    <label>Residence Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Live Rent-Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>