unpackaged/main/default/objects/ApplicantAddress__c/fields/ResidenceType__c.field-meta.xml
<CustomField>
    <fullName>ResidenceType__c</fullName>
    <label>Residence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Former Address</fullName>
            </value>
            <value>
                <fullName>Present Address</fullName>
            </value>
            <value>
                <fullName>Mailing Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>