unpackaged/main/default/objects/ApplicantAddress__c/fields/Unitno__c.field-meta.xml
<CustomField>
    <fullName>Unitno__c</fullName>
    <label>Unit no.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>