unpackaged/main/default/objects/ApplicantAddress__c/fields/YearsInResidence__c.field-meta.xml
<CustomField>
    <fullName>YearsInResidence__c</fullName>
    <label>Years in Residence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>